[package]
name = "topdown"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
glium = "0.32.1"
hecs = { version = "0.10.3", features = ["hecs-macros"] }
image = "0.24.7"
nalgebra-glm = "0.18.0"
once_cell = "1.18.0"
